<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SnowDay</string>
    <string name="title_activity_snow_day_result">Snow Day Calculator</string>
    <string name="title_activity_snow_day">Snow Day Calculator</string>
    <string name="btn_start">Start</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="day">Choose a Day</string>
    <string name="dayinfo">Information</string>
    <string name="prev">How many snow days have occurred?</string>
    <string name="next">Next</string>
    <string name="calculate">Calculate!</string>
    <string name="percent">Percent</string>
    <string name="list">Select a Number</string>
    <string name="quit">Quit</string>
    <string name="tier1">Academies / Institutions</string>
    <string name="tier2">Districts in Neighboring Counties</string>
    <string name="tier3">Districts in Genesee County</string>
    <string name="tier4">Districts near Grand Blanc</string>
    <string name="GBAcademy">Grand Blanc Academy:</string>
    <string name="HolyFamily">Holy Family:</string>
    <string name="WPAcademy">Woodland Park Academy:</string>
    <string name="GISD">Genesee I.S.D.:</string>
    <string name="Durand">Durand:</string>
    <string name="Holly">Holly:</string>
    <string name="Lapeer">Lapeer:</string>
    <string name="Owosso">Owosso:</string>
    <string name="Beecher">Beecher:</string>
    <string name="Clio">Clio:</string>
    <string name="Davison">Davison:</string>
    <string name="Fenton">Fenton:</string>
    <string name="Flushing">Flushing:</string>
    <string name="Genesee">Genesee:</string>
    <string name="Kearsley">Kearsley:</string>
    <string name="LKFenton">Lake Fenton:</string>
    <string name="Linden">Linden:</string>
    <string name="Montrose">Montrose:</string>
    <string name="Morris">Mount Morris:</string>
    <string name="SzCreek">Swartz Creek:</string>
    <string name="Atherton">Atherton:</string>
    <string name="Bendle">Bendle:</string>
    <string name="Bentley">Bentley:</string>
    <string name="Flint">Flint:</string>
    <string name="Goodrich">Goodrich:</string>
    <string name="Carman">Carman-Ainsworth:</string>
    <string name="GB">Grand Blanc:</string>
    <string name="DayRun">Running calculation for </string>
    <string name="NoClosings">Doesn\'t look like *any* schools are closed.</string>
    <string name="WJRTClosings">WJRT School Closings</string>
    <string name="Closings">Closings</string>
    <string name="WJRTError">Unable to parse WJRT listings.</string>
    <string name="ErrorContact">If this error persists please contact the developer.</string>
    <string name="NoWeather">"No applicable weather warnings."</string>
    <string name="WeatherError">Unable to obtain weather.</string>
    <string name="NoConnection">Check Internet Connection</string>
    <string name="SchoolOpen">The school\'s already open.</string>
    <string name="Open"> OPEN</string>
    <string name="Closed">" CLOSED</string>
    <string name="GBDismissed">School\'s already out for today.</string>
    <string name="Dismissed">" Dismissed</string>
    <string name="SaturdayTomorrow">Tomorrow is Saturday.</string>
    <string name="SaturdayToday">Today is Saturday.</string>
    <string name="SundayTomorrow">Tomorrow is Sunday.</string>
    <string name="SundayToday">Today is Sunday.</string>
    <string name="Weekend">Enjoy the weekend!</string>
    <string name="GBClosedToday">Grand Blanc is Closed Today!</string>
    <string name="GBClosedTomorrow">Grand Blanc is Closed Tomorrow!</string>
    <string name="SnowDay">Enjoy your Snow Day!</string>
    <string name="NWS">National Weather Service</string>
    <string name="Weather">Weather</string>
    <string name="radarshow">Show Radar</string>
    <string name="radarhide">Hide Radar</string>
    <string name="InEffect">in effect</string>
    <string name="HazardWeather">Hazardous Weather Outlook</string>
    <string name="SigWeather">Significant Weather Advisory</string>
    <string name="WinterAdvisory">Winter Weather Advisory</string>
    <string name="WinterWatch">Winter Storm Watch</string>
    <string name="WinterWarn">Winter Storm Warning.</string>
    <string name="LakeSnowWatch">Lake-Effect Snow Advisory / Watch</string>
    <string name="Rain">Freezing Rain / Drizzle / Fog Advisory</string>
    <string name="WindChillAdvisory">Wind Chill Advisory</string>
    <string name="WindChillWatch">Wind Chill Watch</string>
    <string name="BlizzardWatch">Blizzard Watch</string>
    <string name="WinterStormWarn">Winter Storm Warning</string>
    <string name="LakeSnowWarn">Lake-Effect Snow Warning</string>
    <string name="IceStorm">Ice Storm Warning</string>
    <string name="WindChillWarn">Wind Chill Warning</string>
    <string name="BlizzardWarn">Blizzard Warning</string>
    <string name="weather_image">NWS Radar Mosaic</string>
    <string name="action_settings">Settings</string>

    <string-array name="days_array">
        <item>Select</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10 or more</item>
    </string-array>
    <string-array name="closings_array">
        <item>@string/GB</item>
        <item>@string/Carman</item>
        <item>@string/Atherton</item>
        <item>@string/Bendle</item>
        <item>@string/Flint</item>
        <item>@string/Goodrich</item>
        <item>@string/Beecher</item>
        <item>@string/Clio</item>
        <item>@string/Davison</item>
        <item>@string/Fenton</item>
        <item>@string/Flushing</item>
        <item>@string/Genesee</item>
        <item>@string/Kearsley</item>
        <item>@string/LKFenton</item>
        <item>@string/Linden</item>
        <item>@string/Montrose</item>
        <item>@string/Morris</item>
        <item>@string/SzCreek</item>
        <item>@string/Durand</item>
        <item>@string/Holly</item>
        <item>@string/Lapeer</item>
        <item>@string/Owosso</item>
        <item>@string/GBAcademy</item>
        <item>@string/GISD</item>
        <item>@string/HolyFamily</item>
        <item>@string/WPAcademy</item>
    </string-array>
<<<<<<< HEAD
=======

    <string name="hello_blank_fragment">Hello blank fragment</string>
>>>>>>> master

</resources>
