<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.GBSnowDay.SnowDay.ResultClosings">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollClosings"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/GB"
                android:id="@+id/txtGB"
                android:visibility="visible"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Carman"
                android:id="@+id/txtCarman"

                android:visibility="visible"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tier4"
                android:id="@+id/txtTier4"

                android:visibility="visible"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Atherton"
                android:id="@+id/txtAtherton"
                android:visibility="visible"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Bendle"
                android:id="@+id/txtBendle"
                android:visibility="visible"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Flint"
                android:id="@+id/txtFlint"
                android:visibility="visible"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Goodrich"
                android:id="@+id/txtGoodrich"
                android:visibility="visible"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tier3"
                android:id="@+id/txtTier3"

                android:visibility="visible"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Beecher"
                android:id="@+id/txtBeecher"
                android:visibility="visible"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Clio"
                android:id="@+id/txtClio"
                android:visibility="visible"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Davison"
                android:id="@+id/txtDavison"
                android:visibility="visible"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Fenton"
                android:id="@+id/txtFenton"
                android:visibility="visible"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Flushing"
                android:id="@+id/txtFlushing"
                android:visibility="visible"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Genesee"
                android:id="@+id/txtGenesee"
                android:visibility="visible"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Kearsley"
                android:id="@+id/txtKearsley"
                android:visibility="visible"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/LKFenton"
                android:id="@+id/txtLKFenton"
                android:visibility="visible"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Linden"
                android:id="@+id/txtLinden"
                android:visibility="visible"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Montrose"
                android:id="@+id/txtMontrose"
                android:visibility="visible"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Morris"
                android:id="@+id/txtMorris"
                android:visibility="visible"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/SzCreek"
                android:id="@+id/txtSzCreek"
                android:visibility="visible"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tier2"
                android:id="@+id/txtTier2"

                android:visibility="visible"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Durand"
                android:id="@+id/txtDurand"
                android:visibility="visible"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Holly"
                android:id="@+id/txtHolly"
                android:visibility="visible"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Lapeer"
                android:id="@+id/txtLapeer"
                android:visibility="visible"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Owosso"
                android:id="@+id/txtOwosso"
                android:visibility="visible"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tier1"
                android:id="@+id/txtTier1"

                android:visibility="visible"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/GBAcademy"
                android:id="@+id/txtGBAcademy"
                android:visibility="visible"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/GISD"
                android:id="@+id/txtGISD"
                android:visibility="visible"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/HolyFamily"
                android:id="@+id/txtHolyFamily"
                android:visibility="visible"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/WPAcademy"
                android:id="@+id/txtWPAcademy"
                android:visibility="visible"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
